bgdk/bgd-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: 'false'
    deployment.kubernetes.io/revision: '1'
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"eportal-liferay:latest","namespace":"eportal-build"},"fieldPath":"spec.template.spec.containers[?(@.name==\"liferaytest\")].image","pause":"false"}]
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"alpha.image.policy.openshift.io/resolve-names":"*","app.openshift.io/route-disabled":"false","deployment.kubernetes.io/revision":"1","image.openshift.io/triggers":"[{\"from\":{\"kind\":\"ImageStreamTag\",\"name\":\"eportal-liferay:latest\",\"namespace\":\"eportal-build\"},\"fieldPath\":\"spec.template.spec.containers[?(@.name==\\\"liferaytest\\\")].image\",\"pause\":\"false\"}]","openshift.io/generated-by":"OpenShiftWe [...]
      has minimum
      availability.","reason":"MinimumReplicasAvailable","status":"True","type":"Available"},{"lastTransitionTime":"2023-08-29T06:21:42Z","lastUpdateTime":"2023-08-29T06:21:47Z","message":"ReplicaSet
      \"liferaytest-79d6f6c989\" has successfully
      progressed.","reason":"NewReplicaSetAvailable","status":"True","type":"Progressing"}],"observedGeneration":1,"readyReplicas":2,"replicas":2,"updatedReplicas":2}}
    openshift.io/generated-by: OpenShiftWebConsole

  name: eportal-liferays-prod

  creationTimestamp: '2023-08-29T06:21:42Z'
  generation: 1
  managedFields:
    - manager: argocd-controller
      operation: Update
      apiVersion: apps/v1
      time: '2023-08-29T06:21:42Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:alpha.image.policy.openshift.io/resolve-names': {}
            'f:app.openshift.io/route-disabled': {}
            'f:deployment.kubernetes.io/revision': {}
            'f:image.openshift.io/triggers': {}
            'f:kubectl.kubernetes.io/last-applied-configuration': {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            'f:app.openshift.io/runtime': {}
            'f:app': {}
            'f:app.kubernetes.io/name': {}
            .: {}
            'f:app.kubernetes.io/part-of': {}
            'f:app.openshift.io/runtime-version': {}
            'f:app.openshift.io/runtime-namespace': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/component': {}
        'f:spec':
          'f:progressDeadlineSeconds': {}
          'f:replicas': {}
          'f:revisionHistoryLimit': {}
          'f:selector': {}
          'f:strategy':
            'f:rollingUpdate':
              .: {}
              'f:maxSurge': {}
              'f:maxUnavailable': {}
            'f:type': {}
          'f:template':
            'f:metadata':
              'f:annotations':
                .: {}
                'f:openshift.io/generated-by': {}
              'f:labels':
                .: {}
                'f:app': {}
                'f:deployment': {}
            'f:spec':
              'f:containers':
                'k:{"name":"liferaytest"}':
                  .: {}
                  'f:image': {}
                  'f:imagePullPolicy': {}
                  'f:name': {}
                  'f:ports':
                    .: {}
                    'k:{"containerPort":8000,"protocol":"TCP"}':
                      .: {}
                      'f:containerPort': {}
                      'f:protocol': {}
                    'k:{"containerPort":8009,"protocol":"TCP"}':
                      .: {}
                      'f:containerPort': {}
                      'f:protocol': {}
                    'k:{"containerPort":8080,"protocol":"TCP"}':
                      .: {}
                      'f:containerPort': {}
                      'f:protocol': {}
                    'k:{"containerPort":8081,"protocol":"TCP"}':
                      .: {}
                      'f:containerPort': {}
                      'f:protocol': {}
                    'k:{"containerPort":11311,"protocol":"TCP"}':
                      .: {}
                      'f:containerPort': {}
                      'f:protocol': {}
                  'f:resources':
                    .: {}
                    'f:limits':
                      .: {}
                      'f:cpu': {}
                      'f:memory': {}
                    'f:requests':
                      .: {}
                      'f:cpu': {}
                      'f:memory': {}
                  'f:terminationMessagePath': {}
                  'f:terminationMessagePolicy': {}
              'f:dnsPolicy': {}
              'f:restartPolicy': {}
              'f:schedulerName': {}
              'f:securityContext': {}
              'f:terminationGracePeriodSeconds': {}
    - manager: kube-controller-manager
      operation: Update
      apiVersion: apps/v1
      time: '2023-08-29T06:21:47Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:availableReplicas': {}
          'f:conditions':
            .: {}
            'k:{"type":"Available"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
            'k:{"type":"Progressing"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
          'f:observedGeneration': {}
          'f:readyReplicas': {}
          'f:replicas': {}
          'f:updatedReplicas': {}
      subresource: status
  namespace: eportal-staging
  labels:
    app: eportal-liferays-prod
    app.kubernetes.io/component: eportal-liferays-prod
    app.kubernetes.io/instance: eportal-liferays-prod
    app.kubernetes.io/name: eportal-liferays-prod
    app.kubernetes.io/part-of: eportal-liferays-prod
    app.openshift.io/runtime: eportal-liferays-prod
    app.openshift.io/runtime-namespace: eportal-build
    app.openshift.io/runtime-version: latest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eportal-liferays-prod
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: eportal-liferays-prod
        deployment: eportal-liferays-prod
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
    spec:
      containers:
        - name: eportal-liferays-prod
          image: >-
            image-registry.openshift-image-registry.svc:5000/eportal-build/eportal-liferay@sha256:1bce3be6ecc914b4cf4ed2ecf83f80757b4b9e48ca541671ef41381c594b6de3
          ports:
            - containerPort: 11311
              protocol: TCP
            - containerPort: 8000
              protocol: TCP
            - containerPort: 8009
              protocol: TCP
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8081
              protocol: TCP
          resources:
            limits:
              cpu: 150m
              memory: 5Gi
            requests:
              cpu: 150m
              memory: 5Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
status:
  observedGeneration: 2
  replicas: 2
  updatedReplicas: 2
  readyReplicas: 2
  availableReplicas: 2
  conditions:
    - type: Available
      status: 'True'
      lastUpdateTime: '2023-08-29T06:21:47Z'
      lastTransitionTime: '2023-08-29T06:21:47Z'
      reason: MinimumReplicasAvailable
      message: Deployment has minimum availability.
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2023-08-29T06:21:47Z'
      lastTransitionTime: '2023-08-29T06:21:42Z'
      reason: NewReplicaSetAvailable
      message: ReplicaSet "liferaytest-79d6f6c989" has successfully progressed.
